# Space2D

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile_Ref  README.md  Space2DConfig.cmake.in
html/: _angular_type_8h.html  _angular_type_8h__dep__incl.dot  _angular_type_8h__incl.dot  _angular_type_8h_source.html  _dim2_8h.html  _dim2_8h__dep__incl.dot  _dim2_8h__incl.dot  _dim2_8h_source.html  _linear_type_8h.html  _linear_type_8h__dep__incl.dot  _linear_type_8h__incl.dot  _linear_type_8h_source.html  _mat3_8h.html  _mat3_8h__dep__incl.dot  _mat3_8h__incl.dot  _mat3_8h_source.html  _norm_vec2_8h.html  _norm_vec2_8h__dep__incl.dot  _norm_vec2_8h__incl.dot  _norm_vec2_8h_source.html  _point2_8h.html  _point2_8h__dep__incl.dot  _point2_8h__incl.dot  _point2_8h_source.html  _poly2_8h.html  _poly2_8h__dep__incl.dot  _poly2_8h__incl.dot  _poly2_8h_source.html  _rect2_8h.html  _rect2_8h__dep__incl.dot  _rect2_8h__incl.dot  _rect2_8h_source.html  _s2_d_iterator_8h.html  _s2_d_iterator_8h__dep__incl.dot  _s2_d_iterator_8h_source.html  _s2_d_macros_8h.html  _s2_d_macros_8h__dep__incl.dot  _s2_d_macros_8h_source.html  _s2_d_math_8h.html  _s2_d_math_8h__dep__incl.dot  (+171 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+47 more)
include/: AngularType.h  Dim2.h  LinearType.h  Mat3.h  NormVec2.h  Point2.h  Poly2.h  Rect2.h  S2DIterator.h  S2DMacros.h  S2DMath.h  Space2D.h  Vec2.h
latex/: _angular_type_8h.tex  _dim2_8h.tex  _linear_type_8h.tex  _mat3_8h.tex  _norm_vec2_8h.tex  _point2_8h.tex  _poly2_8h.tex  _rect2_8h.tex  _s2_d_iterator_8h.tex  _s2_d_macros_8h.tex  _s2_d_math_8h.tex  _space2_d_8h.tex  _vec2_8h.tex  annotated.tex  class_space2_d_1_1_angular_type.tex  class_space2_d_1_1_dim2.tex  class_space2_d_1_1_linear_type.tex  class_space2_d_1_1_mat3.tex  class_space2_d_1_1_norm_vec2.tex  class_space2_d_1_1_point2.tex  class_space2_d_1_1_poly2.tex  class_space2_d_1_1_rect2.tex  class_space2_d_1_1_vec2.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  namespace_space2_d.tex  namespaces.tex  namespaces2d.tex  refman.tex  struct_space2_d_1_1_dim2_1_1_iterator.tex  struct_space2_d_1_1_norm_vec2_1_1_iterator.tex  struct_space2_d_1_1_point2_1_1_iterator.tex  struct_space2_d_1_1_poly2_1_1_iterator.tex  struct_space2_d_1_1_rect2_1_1_iterator.tex  struct_space2_d_1_1_vec2_1_1_c_iterator.tex  struct_space2_d_1_1_vec2_1_1_iterator.tex  todo.tex
src/driversrc/: driver.cpp
src/testsrc/: test.cpp
